@@ -1,6 +1,9 @@
 Changes made from the "0.3" release to the "0.4" release:
 -----------------------------------------------------------
 
+- In order to accelerate the rendering of glyphs in GLC_LINE and GLC_TRIANGLE
+  modes, outline curves that lie outside the viewport are replaced by a
+  piecewise linear curve that joins the control points
 - The criterion that is used by the de Casteljau algorithm is now computed in
   pixel distance rather than in object space distance whenever no display list
   is building. This leads to a more optimal number of vertices which depends on
